--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ce_community_web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AndrewCloete.github.io/ce_community_web"
+  "homepage": "https://AndrewCloete.github.io/ce_community_web",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
